--- a/OpenTkProject.csproj
+++ b/OpenTkProject.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Drawables\Models\Particles\ParticleSystem.cs" />
     <Compile Include="Game\Lights\LightSpot.cs" />
     <Compile Include="Game\Lights\LightSun.cs" />
+    <Compile Include="Game\Settings.cs" />
     <Compile Include="Game\Tools\GameMenu.cs" />
     <Compile Include="Game\Tools\Grabber.cs" />
     <Compile Include="Game\Tools\Remover.cs" />
