--- a/OpenTkProject.csproj
+++ b/OpenTkProject.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Loader\ColladaScene.cs" />
     <Compile Include="Loader\FileSeeker.cs" />
     <Compile Include="Drawables\Models\Gui\Gui.cs" />
+    <Compile Include="Loader\LoaderDDS.cs" />
     <Compile Include="Loader\MaterialLoder.cs" />
     <Compile Include="Drawables\Quad2d.cs" />
     <Compile Include="FramebufferCreator.cs" />
